[project]
name = "sanic-api"
version = "0.3.0a4"
keywords = ["Sanic", "异步", "Sanic扩展"]
description = "Sanic 框架实用API工具集，拥有自动生成文档、参数校验、配置的导入、日志功能的优化等功能，更好的助力接口的开发"
authors = [
    { name = "昊色居士", email = "xhrtxh@gmail.com" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: BSD",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    # sanic
    "sanic>=23.12.0",
    "sanic-ext>=23.12.0",
    # pydantic 模型定义
    "pydantic[dotenv]>=2.9.2",
    # pydantic的设置插件
    "pydantic-settings[yaml,toml]>=2.5.2",
    # 日志打印
    "loguru>=0.7.2",
    # json
    "ujson>=5.7.0",
    "orjson>=3.8.6",
    # 配置
    "hs-config==0.1.3a5",
    # 哨兵
    "sentry-sdk>=2.17.0",
    # loki日志推送
    "loki-logger-handler>=0.1.4",
    "requests>=2.31.0,<2.32.dev0",
]

[project.urls]
homepage = "https://github.com/x-haose/sanic-api"
repository = "https://github.com/x-haose/sanic-api"
documentation = "https://github.com/x-haose/sanic-api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "twine>=6.0.1",
]
include = [
    "src/sanic_api/"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sanic_api"]

[[tool.rye.sources]]
name = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.bandit]
skips = [
    "B501",
    "B113"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle error
    "E",
    # Pyflakes
    "F",
    # pycodestyle warnings
    "W",
    # pyupgrade
    "UP",
    # flake8-comprehensions
    "C",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # do not perform function calls in argument defaults
    "B008",
    # too complex
    "C901",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[tool.rye.scripts]
publish_testpypi = { cmd = "rye run twine upload -r testpypi dist/*" }
publish_pypi = { cmd = "rye run twine upload dist/*" }
sb = { cmd = "rye build --clean" }
spt = { chain = ["sb", "publish_testpypi"] }
sp = { chain = ["sb", "publish_pypi"] }
check_i = { cmd = "rye run pre-commit install" }
check = { cmd = "rye run pre-commit run --all-files" }
